final updated files

--- a/experiment/mcq.ipynb
+++ b/experiment/mcq.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
    "outputs": [],
    "source": [
     "with open(file_path,'r') as file:\n",
-    "    TEXT = file.read()"
+    "    text = file.read()"
    ]
   },
   {
@@ -290,7 +290,7 @@
     }
    ],
    "source": [
-    "print(TEXT)"
+    "print(text)"
    ]
   },
   {
@@ -394,7 +394,7 @@
     "with get_openai_callback() as cb:\n",
     "    response=generate_evaluate_chain(\n",
     "        {\n",
-    "            \"text\": TEXT,\n",
+    "            \"text\": text,\n",
     "            \"number\": NUMBER,\n",
     "            \"subject\":SUBJECT,\n",
     "            \"tone\": TONE,\n",
